tests/baselines/reference/stringLiteralsWithSwitchStatements06.errors.txt
tests/cases/conformance/types/stringLiteral/stringLiteralsWithSwitchStatements06.ts(11,10): error TS2322: Type '"baz"' is not assignable to type '"foo" | "bar"'.
  Type '"baz"' is not assignable to type '"bar"'.
tests/cases/conformance/types/stringLiteral/stringLiteralsWithSwitchStatements06.ts(17,10): error TS2322: Type '"baz"' is not assignable to type '"foo" | "bar"'.
  Type '"baz"' is not assignable to type '"bar"'.
tests/cases/conformance/types/stringLiteral/stringLiteralsWithSwitchStatements06.ts(17,24): error TS1005: ':' expected.
tests/cases/conformance/types/stringLiteral/stringLiteralsWithSwitchStatements06.ts(21,10): error TS2322: Type '"baz" | "bar"' is not assignable to type '"foo" | "bar"'.
  Type '"baz"' is not assignable to type '"foo" | "bar"'.
    Type '"baz"' is not assignable to type '"bar"'.


==== tests/cases/conformance/types/stringLiteral/stringLiteralsWithSwitchStatements06.ts (4 errors) ====
    let x: "foo";
    let y: "foo" | "bar"; 
    
    declare function randBool(): boolean;
    
    switch (y) {
        case "foo", x:
            break;
        case x, "foo":
            break;
        case x, "baz":
             ~~~~~~~~
!!! error TS2322: Type '"baz"' is not assignable to type '"foo" | "bar"'.
!!! error TS2322:   Type '"baz"' is not assignable to type '"bar"'.
            break;
        case "baz", x:
            break;
        case "baz" && "bar":
            break;
        case "bar" && "baz";
             ~~~~~~~~~~~~~~
!!! error TS2322: Type '"baz"' is not assignable to type '"foo" | "bar"'.
!!! error TS2322:   Type '"baz"' is not assignable to type '"bar"'.
                           ~
!!! error TS1005: ':' expected.
            break;
        case "baz" && ("foo" || "bar"):
            break;
        case "bar" && ("baz" || "bar"):
             ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '"baz" | "bar"' is not assignable to type '"foo" | "bar"'.
!!! error TS2322:   Type '"baz"' is not assignable to type '"foo" | "bar"'.
!!! error TS2322:     Type '"baz"' is not assignable to type '"bar"'.
            break;
    }
    